objects/WT_Knowledge_Auto_Suggest__c.object
<CustomObject>
    <fields>
        <fullName>WT_Auto_Suggest_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Suggest Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Knowledge_Status__c</fullName>
        <formula>TEXT(WT_Knowledge__r.PublishStatus)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Knowledge_URL__c</fullName>
        <formula>WT_Knowledge__r.UrlName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Knowledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Knowledge Auto Suggest</relationshipLabel>
        <relationshipName>Knowledge_Auto_Suggest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Search_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Search Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Auto Suggest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Search_Term__c</columns>
        <columns>WT_Auto_Suggest_Text__c</columns>
        <columns>WT_Knowledge__c</columns>
        <columns>WT_Knowledge_Status__c</columns>
        <columns>WT_Knowledge_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KAN-{0000000}</displayFormat>
        <label>Knowledge Autosuggest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Auto Suggest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>